--- a/Modpack.csproj
+++ b/Modpack.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <Version>2.4.0</Version>
+        <Version>1.0.0</Version>
         <Description>Modpack</Description>
         <Authors>Julius Kreutz</Authors>
     </PropertyGroup>
 
     <PropertyGroup>
-        <GameVersion>2021.4.14s</GameVersion>
-        <Mappings>EoF-1141/Mappings:0.4.1</Mappings>
+        <GameVersion>2021.5.10s</GameVersion>
         <DefineConstants>$(DefineConstants);STEAM</DefineConstants>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
@@ -19,10 +19,23 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Reactor.OxygenFilter.MSBuild" Version="*" />
+        <Reference Include="$(AmongUs)/BepInEx/core/*.dll" />
+        <Reference Include="$(AmongUs)/BepInEx/unhollowed/*.dll" />
     </ItemGroup>
 
-    <Target Name="Copy" AfterTargets="Reobfuscate">
-        <Copy SourceFiles="$(OutputPath)reobfuscated/$(AssemblyName)-$(GameVersion).dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" />
+    <Target Name="CopyCustomContent" AfterTargets="AfterBuild">
+        <Message Text="Second occurrence" />
+        <Copy SourceFiles="$(ProjectDir)\bin\$(Configuration)\netstandard2.1\Modpack.dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" />
     </Target>
+	
+	<!-- il2cpp newtonsoft -->
+	<ItemGroup>
+		<Reference Include="Newtonsoft.Json, Version=3.7.1.6">
+			<HintPath>$(AmongUs)\BepInEx\unhollowed\Newtonsoft.Json.dll</HintPath>
+			<Aliases>Il2CppNewtonsoft</Aliases>
+		</Reference>
+	</ItemGroup>
+    <PropertyGroup>
+        <NoWarn>$(NoWarn);MSB3243</NoWarn>
+    </PropertyGroup>
 </Project>
